Add searching loans by username
